# openaccountants-mcp

./: .gitignore  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE-ADDITIONAL.md  README.md  glama.json  pyproject.toml  server.json  smoke_test.py
.github/workflows/: ci.yml
openaccountants_mcp/: __init__.py  __main__.py  server.py
