[project]
name = "openaccountants-mcp"
version = "0.3.0"
description = "MCP server giving AI assistants on-demand access to open-source accounting skills across 134 countries, 51 US states, and 13 Canadian provinces/territories — tax, bookkeeping, payroll, e-invoicing, formation, cross-border (Pillar Two, CBAM, FATCA/CRS, DST), and sector verticals."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = ["mcp>=1.0.0", "pyyaml>=6.0"]
keywords = [
    "tax", "accounting", "mcp", "ai", "accountant", "vat", "gst",
    "income-tax", "open-source", "self-employed", "freelancer",
    "claude", "chatgpt", "llm", "tax-computation", "bookkeeping",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Office/Business :: Financial :: Accounting",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://openaccountants.com"
Repository = "https://github.com/openaccountants/openaccountants-mcp"
Issues = "https://github.com/openaccountants/openaccountants-mcp/issues"
Documentation = "https://github.com/openaccountants/openaccountants-mcp#readme"
SkillContent = "https://github.com/openaccountants/openaccountants"

[project.scripts]
openaccountants-mcp = "openaccountants_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
